// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginContainer /> renders correctly 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Login | Triplar
    </title>
  </HelmetWrapper>
  <h1>
    Login
  </h1>
  <Connect(ReduxFormContainer)
    action={[MockFunction]}
  >
    <LoginForm />
  </Connect(ReduxFormContainer)>
  <t
    appId="2240458192891426"
    callback={[Function]}
    cssClass="kep-login-facebook"
    fields="name,email"
    size="metro"
    tag="button"
    textButton="Login with Facebook"
    typeButton="button"
  />
</div>
`;

exports[`<LoginContainer /> renders correctly when requesting 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Login | Triplar
    </title>
  </HelmetWrapper>
  <h1>
    Login
  </h1>
  <p>
    Attempting to login...
  </p>
  <t
    appId="2240458192891426"
    callback={[Function]}
    cssClass="kep-login-facebook"
    fields="name,email"
    size="metro"
    tag="button"
    textButton="Login with Facebook"
    typeButton="button"
  />
</div>
`;
